package br.com.jandernery.precojusto.application.dto;

import java.util.UUID;

public record DuckRecord(String name, UUID motherId) {

}
